# comp-cat-rs

./: Cargo.toml  README.md
src/: lib.rs
src/collapse/: adjunction.rs  free_category.rs  join_is_colimit.rs  limit.rs  mod.rs  monad_is_kan.rs  span.rs
src/effect/: fiber.rs  instances.rs  io.rs  mod.rs  resource.rs  stream.rs
src/foundation/: category.rs  functor.rs  iso.rs  kind.rs  mod.rs  monad.rs  monoidal.rs  nat_trans.rs  semilattice.rs
src/primitive/: kan.rs  mod.rs
