[package]
name = "comp-cat-rs"
version = "0.5.0"
edition = "2024"
description = "Computational category theory in Rust: all constructions as Kan extensions"
license = "MIT"
repository = "https://github.com/MavenRain/comp-cat-rs"
readme = "README.md"
keywords = ["category-theory", "effects", "monad", "functor", "kan-extension"]
categories = ["mathematics", "rust-patterns"]

[dependencies]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = "warn"
needless_pass_by_value = "warn"
manual_map = "warn"
